// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftManagementDialogToolbar > renders correctly when its shift edit dialog 1`] = `
<v-toolbar-stub
  absolute="false"
  border="false"
  class="d-flex justify-center"
  collapse="false"
  collapseposition="start"
  color="white"
  data-v-d1b533e7=""
  density="default"
  extensionheight="48"
  flat="true"
  floating="false"
  height="64"
  tag="header"
  tile="false"
>
  <v-toolbar-title-stub
    class="mx-6 d-flex justify-center font-weight-medium"
    tag="div"
  >
    
    
    <div
      class="text-center text-truncate"
    >
      <div
        class="d-flex align-center justify-center"
      >
        <!--v-if-->
        <span
          class="text-truncate"
          id="toolbar-title"
        >
          Edit shift time
        </span>
        
        <icon-with-tooltip-stub
          additionalclasses="ml-2"
          color=""
          data-v-d1b533e7=""
          icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          iconclickedfn="[Function]"
          iconid=""
          iconsrc=""
          size="16"
          tooltiplocation="top"
          tooltiptext="Learn more"
        />
        
      </div>
      <!--v-if-->
    </div>
  </v-toolbar-title-stub>
</v-toolbar-stub>
`;

exports[`ShiftManagementDialogToolbar > renders correctly when its shift start dialog and isShiftStartSelectionVisible is false 1`] = `
<v-toolbar-stub
  absolute="false"
  border="false"
  class="d-flex justify-center"
  collapse="false"
  collapseposition="start"
  color="white"
  data-v-d1b533e7=""
  density="default"
  extensionheight="48"
  flat="true"
  floating="false"
  height="64"
  tag="header"
  tile="false"
>
  <v-toolbar-title-stub
    class="mx-6 d-flex justify-center font-weight-medium"
    tag="div"
  >
    
    <evocon-v-button-stub
      class="back-button"
      color=""
      data-v-d1b533e7=""
      icon="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
      iconcolor=""
      text=""
      textclass=""
      type="primary"
    />
    
    <div
      class="text-center text-truncate"
    >
      <div
        class="d-flex align-center justify-center"
      >
        <!--v-if-->
        <span
          class="text-truncate"
          id="toolbar-title"
        >
          Start shift
        </span>
        
        <icon-with-tooltip-stub
          additionalclasses="ml-2"
          color=""
          data-v-d1b533e7=""
          icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          iconclickedfn="[Function]"
          iconid=""
          iconsrc=""
          size="16"
          tooltiplocation="top"
          tooltiptext="Learn more"
        />
        
      </div>
      <!--v-if-->
    </div>
  </v-toolbar-title-stub>
</v-toolbar-stub>
`;

exports[`ShiftManagementDialogToolbar > renders correctly when its shift start dialog and isShiftStartSelectionVisible is true 1`] = `
<v-toolbar-stub
  absolute="false"
  border="false"
  class="d-flex justify-center"
  collapse="false"
  collapseposition="start"
  color="white"
  data-v-d1b533e7=""
  density="default"
  extensionheight="48"
  flat="true"
  floating="false"
  height="64"
  tag="header"
  tile="false"
>
  <v-toolbar-title-stub
    class="mx-6 d-flex justify-center font-weight-medium"
    tag="div"
  >
    
    
    <div
      class="text-center text-truncate"
    >
      <div
        class="d-flex align-center justify-center"
      >
        <!--v-if-->
        <span
          class="text-truncate"
          id="toolbar-title"
        >
          Start shift
        </span>
        
        <icon-with-tooltip-stub
          additionalclasses="ml-2"
          color=""
          data-v-d1b533e7=""
          icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
          iconclickedfn="[Function]"
          iconid=""
          iconsrc=""
          size="16"
          tooltiplocation="top"
          tooltiptext="Learn more"
        />
        
      </div>
      <!--v-if-->
    </div>
  </v-toolbar-title-stub>
</v-toolbar-stub>
`;
